# BlessStar

./: .clang-format  .dockerignore  .gitattributes  .gitignore  38天MVP版_1主+2子_三元协作模式精细化开发日程规划（财务运维系统适配版）.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.arm64  README.md  bs_io_registry_phase.txt  docker-compose.yml  fail_cwd.txt  fail_out.txt  insert_section.py  meson.build  test_after_stress_err.txt  test_chain_ctest.txt  test_out.txt  test_regression_ci_fix.txt  test_regression_clean_j1.txt  test_regression_final.txt  test_regression_out.txt  test_regression_out2.txt  一主二子agent模式搭建.md  三智能体提示词.txt  架构方案选择记录.md  进度状态记录.md  项目修改记录.md
.trae/: project_rules.md
adapter/: CMakeLists.txt
adapter/cli/src/: main.cpp
adapter/io/: db_provider_stub.cpp  io_providers.cpp  local_file_provider.cpp  remote_provider_stub.cpp
adapter/log/: memory_log_bus.cpp  spdlog_log_bus.cpp  spdlog_stub.c
adapter/manifest/: attach_plugins.yaml  ir_requirements_invalid_fixture.txt  ir_requirements_io.txt  ir_requirements_log_domains.txt  ir_requirements_orch.txt  manifest_config.h.in
adapter/orchestration/: reload_batch_controller.cpp  reload_batch_factory.cpp  reload_gate_default.cpp  reload_with_report.cpp
adapter/parser/: README.md
adapter/parser/src/: meta_rule.cpp  parser.c
adapter/persistence/: attach_audit.c  attach_crc32.c  attach_crc32.h  attach_fsync.c  attach_fsync.h  attach_runtime_sidecar.c  attach_store.cpp  attach_uri_path.c  attach_uri_path.h  attach_wal.c  attach_watch.c
adapter/plugins/io/: plugin_io.cpp
adapter/plugins/log_domains/: plugin_log_domains.cpp
adapter/plugins/orch/: plugin_orch.cpp
adapter/src/: attach_config.cpp  attach_context.cpp  attach_context_internal.h  attach_execute.cpp  attach_ir_snapshot.cpp  attach_manifest_yaml.cpp  attach_notify_queue.cpp  attach_notify_queue_internal.h  attach_recover.cpp  attach_recover_sidecar.cpp  attach_runtime.cpp  attach_session.cpp  auth_token.c  plugin_ir_requirements.cpp  plugin_loader.cpp  plugin_manifest_paths.cpp  registry_bootstrap.cpp  requirement_filter.cpp
adapter/test/: AttachAtomicityTest.cpp  AttachConcurrencyTest.cpp  AttachContextBootstrapTest.cpp  AttachDay19ShortcomingRegressionTest.cpp  AttachDualTruthSyncTest.cpp  AttachFacadeFreezeDelegateTest.cpp  AttachFreezeEventBusIntegrationTest.cpp  AttachFsyncSpotTest.cpp  AttachManifestYamlTest.cpp  AttachNotifyFlushTest.cpp  AttachP2ShortcomingRegressionTest.cpp  AttachPipelineRegistryTest.cpp  AttachRecoverColdTest.cpp  AttachRecoverConcurrencyTest.cpp  AttachRecoverFsmTest.cpp  AttachRecoverSidecarTest.cpp  AttachResilienceTest.cpp  AttachWatchBenchmark.cpp  AttachWatchTest.cpp  AttachWireFullChainIntegrationTest.cpp  BsReentrancyIoTest.cpp  ConfigParseBoundaryTest.cpp  ConfigParseSecurityAuditTest.cpp  ConfigParseSecurityTest.cpp  ConfigParseTest.cpp  Day19MemoryBaselineTest.cpp  Day19StressReloadLoopTest.cpp  Day8AttachFullIntegrationTest.cpp  IoAttachPipelineTest.cpp  IoLocalProviderBoundaryTest.cpp  IoLocalProviderTest.cpp  IoLocalProviderTimeoutTest.cpp  IoProviderStubTest.cpp  IoRegistryPhaseTest.cpp  JsonLexerTest.cpp  JsonParserTest.cpp  MetaRuleTest.cpp  PluginIrRequirementsTest.cpp  PluginLoaderAttachTest.cpp  PluginLogDomainsAttachIntegrationTest.cpp  (+14 more)
adapter/test/support/: attach_test_fixture.h  config_v1_audit_build.h  config_v1_boundary_build.h  config_v1_golden.h  config_v1_security_build.h  day12_attach_fixture.h  day19_failure_pool.h  day19_fixture_gen.h  day19_profile.h  day19_rss_sampler.h  day19_rss_sampler_win.cpp  test_process_teardown.cpp  test_temp_dir.cpp  test_temp_dir.h
app/bs_db_core/: CMakeLists.txt
app/bs_db_core/src/: db_connector_null.cpp
app/bs_db_mgmt/: CMakeLists.txt
app/bs_db_mgmt/src/: db_config_loader.cpp  db_health_monitor.cpp  db_mgr.cpp  db_plugin_loader.cpp  db_pool.cpp  db_watcher.cpp
app/editor/native/: Cargo.toml  adapter_stubs.c  build.rs  index.d.ts  index.js  package-lock.json  package.json
kernel/common/: CMakeLists.txt
kernel/common/src/: MemoryPool.cpp  Metrics.cpp  Plugin.cpp  bs_log.c  bs_reentrancy.c  bs_safe_format.c  bs_status.c  bs_status_format.c  bs_trace_span.c  bs_wait_trace.c  metrics_export.cpp  metrics_internal.h
kernel/common/test/: BsLogAuditTest.cpp  BsLogTest.cpp  BsStatusTest.cpp  MemoryPoolComprehensiveTest.cpp  MemoryPoolTest.cpp  MetricsComprehensiveTest.cpp  MetricsTest.cpp  PluginTest.cpp
kernel/gate_chain/: CMakeLists.txt
kernel/gate_chain/src/: gate_ast_compiler.c  gate_chain_plugin.cpp  gate_chain_serialize.c  gate_custom_factory.c  gate_default_factory.c  gate_evaluator.c  gate_matcher.c  gate_policy_factory.c
kernel/gate_chain/test/: GateAstCompilerTest.c  GateChainMapUpsertTest.c  GateChainSerializeTest.c  GateEvaluatorTest.c  GateFactoryTest.c
kernel/io/: CMakeLists.txt
kernel/io/src/: io_facade.cpp  io_status_table.c
kernel/io/test/: IoFacadeBoundaryTest.cpp  IoFacadeMaxReadTest.cpp  IoFacadeTest.cpp  IoStatusTableTest.cpp
kernel/ir/: CMakeLists.txt
kernel/ir/src/: ir.cpp  ir_gate.cpp  ir_plugin.cpp  metadata.c  requirements.cpp  resolver.cpp
kernel/ir/test/: IRBenchmark.cpp  IRBoundaryTest.cpp  IRTest.cpp  RequirementsTest.cpp  ResolverTest.cpp
kernel/pipeline/: CMakeLists.txt
kernel/pipeline/src/: executor_plugin.cpp  pipeline.c  pipeline.cpp  stage.c
kernel/pipeline/test/: PipelineBenchmark.cpp  PipelineBoundaryTest.cpp  PipelineTest.cpp
kernel/registry/: CMakeLists.txt
kernel/registry/src/: path_normalize.cpp  path_registry.cpp  registry_facade.cpp  registry_hub.cpp  registry_status_table.c
kernel/registry/test/: LogDomainRegistrationTest.cpp  PathRegistryTest.cpp  RegistryFacadeTest.cpp  RegistryGuardTest.cpp  RegistryHubTest.cpp  StatusDomainFreezeTest.cpp
kernel/report/: CMakeLists.txt
kernel/report/src/: report.c  report.cpp  result.c  result_status_map.c
kernel/report/test/: ReportBenchmark.cpp  ReportBoundaryTest.cpp  ReportTest.cpp  ResultStatusMapTest.cpp
kernel/runtime/: CMakeLists.txt
kernel/schema/: CMakeLists.txt
kernel/state/: CMakeLists.txt
kernel/ui_map/: CMakeLists.txt
(+4647 files in other folders)
